# forFun

part1/: CMakeCache.txt  CMakeLists.txt  GUI  GUI_automoc.cpp  Makefile  cmake_install.cmake  gui.cpp  gui.hpp  main.cpp  software_accessment.pro
part1/GUI_automoc.dir/: moc_gui_UEHJ3UXVRJBPPC.cpp
part2/: CMakeCache.txt  CMakeLists.txt  GUI_2  GUI_2_automoc.cpp  Makefile  cmake_install.cmake  gui_2.cpp  gui_2.hpp  main.cpp  software_assessment_part2.pro
part2/GUI_2_automoc.dir/: moc_gui_2_4RAPFXDW724EA7.cpp
